# Kenny

catkin_ws/: road_edge.csv  waypoint.csv
catkin_ws/csv/: road_edge.csv  road_edge_NCTU.csv  stop_line.csv  stop_line_NCTU.csv  test.csv  waypoint.csv  yellow_line.csv  yellow_line_NCTU.csv  zebra_zone.csv  zebra_zone_NCTU.csv
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/msgs/: points_density.h
catkin_ws/devel/include/points_msgs/: plane_coefficients.h  points_density.h  points_density_array.h
catkin_ws/devel/include/rviz_cloud_annotation/: RectangleSelectionViewport.h  UndoRedoState.h
catkin_ws/devel/include/vector_map/: road_marking.h  road_marking_array.h  waypoint_publish.h  waypoints_array.h
catkin_ws/devel/lib/ground_segmentation/: ground_segmentation_node
catkin_ws/devel/lib/hw4_0310829/: hw4_node
catkin_ws/devel/lib/pkgconfig/: ground_segmentation.pc  hw4_0310829.pc  msgs.pc  points_density.pc  points_msgs.pc  rviz_3d_view_controller.pc  rviz_cloud_annotation.pc  select_points_publisher.pc  select_publisher.pc  vector_map.pc  waypoints_generator.pc
catkin_ws/devel/lib/points_density/: points_density_node
catkin_ws/devel/lib/select_points_publisher/: select_points_publisher_node
catkin_ws/devel/lib/select_publisher/: select_publisher_node
catkin_ws/devel/lib/waypoints_generator/: waypoints_generator_node
catkin_ws/devel/share/ground_segmentation/cmake/: ground_segmentationConfig.cmake
catkin_ws/devel/share/hw4_0310829/cmake/: hw4_0310829Config.cmake
catkin_ws/devel/share/msgs/cmake/: msgs-msg-extras.cmake  msgs-msg-paths.cmake  msgsConfig.cmake
catkin_ws/road_marking/: road_marking.csv
catkin_ws/src/: lane.csv  waypoint.csv
catkin_ws/src/euclidean_cluster/: euclidean_cluster.cpp
catkin_ws/src/hw4_0310829/: CMakeLists.txt  M_0310829.txt  hw4_0310829.cpp  package.xml
catkin_ws/src/hw4_0310829/src/: data.csv  ground_segmentation.cpp  hw4_0310829.cpp  select_points_publisher.cpp
catkin_ws/src/hw5_0310829/: hw5_0310829
catkin_ws/src/hw6_0310829/: hw6_0310829
catkin_ws/src/points_density/: CMakeLists.txt
catkin_ws/src/points_density/src/: points_density.cpp
catkin_ws/src/select_publisher/: CMakeLists.txt
catkin_ws/src/select_publisher/src/: select_publisher.cpp
catkin_ws/src/waypoints_generator/: CMakeLists.txt
catkin_ws/src/waypoints_generator/src/: waypoints_generator.cpp
catkin_ws/waypoint/: 2018-04-02-third_0.csv  waypoint.csv
cloud_viewer/: cloud_viewer.cpp
intensity_filter/: CMakeLists.txt  intensity_filter.cpp
pcd_bounding_box/: CMakeLists.txt  moment_of_inertia(cache).cpp  moment_of_inertia.cpp
pcl_visualizer/: CMakeLists.txt  pcl_visualizer.cpp
(+68 files in other folders)
